<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome to UKFC Triangulation"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <Button android:id="@+id/group"
        android:text="@string/group_nodes"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal" />

    <Button android:id="@+id/configure"
        android:text="@string/obtain_hub_ip"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:text="@string/triangulate"
        android:id="@+id/triangulate"
        android:layout_gravity="center_horizontal" />

    <Button android:id="@+id/room"
        android:text="@string/manage_rooms"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_bands"
        android:id="@+id/band"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:text="@string/synchronise"
        android:id="@+id/synchronise"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
